--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
-    "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint": "./node_modules/.bin/eslint \"**/*.js\"",
+    "lint:fix": "./node_modules/.bin/eslint --fix \"**/*.js\""
   },
   "dependencies": {
     "cors": "2.8.5",
