--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node ./server.js",
-    "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
+    "start": "cross-env NODE_ENV=production node ./src/server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon ./src/server.js",
     "lint": "./node_modules/.bin/eslint \"**/*.js\"",
     "lint:fix": "./node_modules/.bin/eslint --fix \"**/*.js\""
   },
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^16.0.3",
     "express": "4.17.1",
     "joi": "^17.7.0",
+    "mongoose": "^6.8.2",
     "morgan": "1.10.0"
   },
   "devDependencies": {
