--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "lint": "./node_modules/.bin/eslint \"**/*.js\"",
-    "lint:fix": "./node_modules/.bin/eslint --fix \"**/*.js\""
+    "lint:fix": "./node_modules/.bin/eslint --fix \"**/*.js\"",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -30,6 +31,8 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15"
+    "jest": "^29.3.1",
+    "nodemon": "2.0.15",
+    "supertest": "^6.3.3"
   }
 }
